# PicoSentry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-SUMMARY.md  README.md  REVIEW-EXTERNAL-PENTEST-2026-07.md  SECURITY.md  docker-bake.hcl  pyproject.toml  review.md  state.md
.github/workflows/: admission-kind.yml  ci.yml  release.yml  verify-release.yml
.tools/: minify.py
.venv-ci-test/: pyvenv.cfg
datasets/malware/: cargo-malware.json  go-malware.json  go-malware.meta.json  maven-malware.json  npm-malware.meta.json  nuget-malware.meta.json  rubygems-malware.json
deploy/kubernetes/: deployment.yaml
deploy/monitoring/: picodome-alerts.yaml  picodome-grafana-dashboard.json
deploy/security/: picodome-apparmor.yaml  picodome-networkpolicy-strict.yaml  picodome-seccomp.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEEP_REVIEW.md  DEPLOYMENT_SECURITY.md  EXTENSION_GUIDE.md  INTERNAL_API.md  PLUGIN_DEVELOPMENT.md  SECURITY-ATTACK-SURFACE.md  SECURITY_REVIEW.md  SECURITY_REVIEW_ADMISSION.md  SECURITY_REVIEW_CLUSTER.md  SECURITY_REVIEW_DAEMON.md  THREAT_MODEL.md  WATCH.md  docker.md  manual.md  model-card.md
docs/adr/: ADR-001-offline-deterministic-scanner.md  ADR-002-kernel-sandbox.md  ADR-003-python-uv-packaging.md  ADR-004-plugin-trust-boundary.md  ADR-005-picoshogun-picosentry-naming.md
docs/ops/: runbook.md
docs/strategic/: 01-multi-ecosystem.md  02-cross-layer-correlation.md  03-reachability-vex-remediation.md  04-ai-agent-security.md
examples/npm-postinstall-exfil/: README.md  package.json
examples/prompt-injection/: README.md  instruction-override.txt  jailbreak.txt  roleplay-jailbreak.txt  sensitive-output.txt
examples/pypi-obfuscated-setup/: README.md  reqursts.py  setup.py
picosentry/: __init__.py  __main__.py  cli.py  experimental.py
picosentry/_core/: __init__.py  audit.py  config.py  guards.py  models.py  policy.py  security_check.py
picosentry/cli_commands/: __init__.py  _common.py  _maturity.py  admission.py  corpus.py  daemon.py  diff.py  health.py  init.py  rules.py  sandbox.py  scan.py  serve.py  update.py  version.py  watch.py
picosentry/sandbox/: __init__.py  __main__.py  api_versioning.py  auth.py  baseline_hardening.py  cli.py  config.py  errors.py  guards.py  health.py  license.py  logging.py  models.py  redis_health.py  reproducible.py  slo.py  tracing.py  webhooks.py  workspace.py
picosentry/scan/: __init__.py  __main__.py  _cli_service_formatters.py  _cli_service_helpers.py  _cli_service_paths.py  _cli_service_policy.py  _cli_service_worker.py  _engine_scan_helpers.py  _network.py  adversarial_mutations.py  advisory.py  audit.py  auth.py  benchmark_corpus.py  cache.py  cli.py  cli_service.py  config.py  corpus_governance.py  corpus_share.py  crypto.py  daemon.py  detection_quality.py  engine.py  enterprise.py  fleet.py  guards.py  ioc_registry.py  logging.py  management.py  metrics.py  models.py  mutation_benchmark.py  policy.py  policy_lifecycle.py  tenant.py  validation.py  workspace.py
picosentry/watch/: __init__.py  __main__.py  cli.py  config.py  health.py  ratelimit.py  server.py  types.py
scripts/: build_docker_multiarch.sh  generate_corpus_fixtures.py  gitnexus-analyze.sh  gitnexus-kill-orphans.sh  gitnexus-mcp-server.sh  live_test_admission.sh  live_test_postgres.sh  mutation_benchmark.py  regen_proto.sh  render_benchmarks.py  sync_malware_benchmark.py  test_doctor.py  verify_release.py
tests/: conftest.py  test_auth.py  test_errors.py  test_experimental_status.py  test_public_api.py  test_release.py  test_security_check.py  test_security_gates.py  test_slo.py
tests/integration/: test_cross_codebase.py
tests/sandbox/: check_deploy_security.py  conftest.py  test_admission_helm.py  test_admission_scanner.py  test_admission_validator.py  test_admission_webhook.py  test_api_versioning.py  test_audit.py  test_audit_coverage.py  test_audit_sinks.py  test_auth.py  test_baseline_hardening.py  test_baselines.py  test_cert_rotation.py  test_cli_path_security.py  test_cluster.py  test_cluster_3node.py  test_config.py  test_config_loader.py  test_daemon_handler.py  test_daemon_hardening.py  test_daemon_store.py  test_deploy_security.py  test_differ.py  test_file_sink.py  test_formatters_extra.py  test_grpc_transport.py  test_guards.py  test_guards_extra.py  test_health.py  test_l3_sandbox.py  test_l4_behavioral.py  test_landlock_backend.py  test_license.py  test_logging_extra.py  test_malicious_workloads.py  test_models.py  test_mtls.py  test_notary.py  test_policy.py  (+29 more)
tests/scan/: conftest.py  test_action_exit_code.py  test_advisory_extended.py  test_audit.py  test_auth.py  test_auth_rbac_tls.py  test_baseline.py  test_benchmark.py  test_cache_governance.py  test_cargo.py  test_cli.py  test_cli_extended.py  test_cli_path_security.py  test_cli_unit.py  test_config.py  test_config_integration.py  test_corpus_governance.py  test_corpus_index.py  test_corpus_share_extended.py  test_crypto.py  test_crypto_integration.py  test_cyclonedx_extended.py  test_daemon.py  test_daemon_extended.py  test_dashboard_rbac.py  test_detection_quality.py  test_deterministic_output.py  test_docs.py  test_engine.py  test_engine_timebox.py  test_enterprise.py  test_exception_handling.py  test_fleet.py  test_github.py  test_go.py  test_guards.py  test_init_and_sarif.py  test_ioc_detection_extended.py  test_ioc_registry_extended.py  test_license.py  (+30 more)
tests/scan/fixtures/cargo_malicious/: Cargo.toml
tests/scan/fixtures/pypi_clean/: pyproject.toml  requirements.txt
tests/serve/: conftest.py  test_api.py  test_correlation.py  test_correlation_persistence.py  test_ddos_health_exempt.py  test_health_router.py  test_integration.py  test_plugin_auto_load.py  test_plugin_signature_trust.py  test_postgres_backend.py  test_rate_limit_redis.py  test_routers_and_middleware.py  test_sandbox_router.py  test_scans_workspace.py  test_scheduler.py  test_security_review.py  test_server_hardening.py  test_websocket_auth.py
tests/watch/: conftest.py  test_cli.py  test_config.py  (+15 more)
(+3013 files in other folders)
