[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picosentry"
version = "2.0.13"
description = "Unified supply-chain security suite — scanner, sandbox, LLM defense, and orchestration"
readme = "README.md"
license = {text = "BUSL-1.1"}
requires-python = ">=3.10"
authors = [{name = "Henrik Kirk", email = "kirk@kirkforge.dev"}]
maintainers = [{name = "KirkForge", email = "kirk@kirkforge.dev"}]
keywords = [
    "security", "supply-chain", "sandbox", "llm-defense",
    "prompt-injection", "scanner", "npm", "pnpm",
    "deterministic", "audit", "orchestration",
    "devsecops", "ci-cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Framework :: Pytest",
    "Typing :: Typed",
]

# ── Core dependencies (always installed) ──────────────────────────────────
# Lightweight: scanner + sandbox + watch logic work without HTTP deps.
dependencies = [
    "pyyaml>=6.0",
]

# ── Extras ──
[project.optional-dependencies]
# Supply-chain scanner: online corpus management
scan = [
    "requests>=2.31.0",
]
# LLM defender HTTP daemon (lightweight FastAPI)
watch-server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
# Orchestration server (FastAPI + dashboard + all middleware)
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "croniter>=1.0.0",
]
# OpenTelemetry observability
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
# Sigstore signing
sigstore = [
    "sigstore>=3.0",
]
# gRPC transport (PicoDome daemon).  The generated protobuf stubs are
# committed (scripts/regen_proto.sh) so this extra only needs the
# runtime grpcio package, not grpcio-tools.  Pin to >=1.50 because
# ``grpc.ServiceRpcHandlers`` (which our fallback used to call) was
# removed in 1.50.
grpc = [
    "grpcio>=1.50",
]
# Everything
all = [
    "picosentry[scan,watch-server,serve,otel,sigstore,grpc]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.0",
    "httpx>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=5.0",
    "jsonschema>=4.0",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/KirkForge/PicoSentry"
Documentation = "https://github.com/KirkForge/PicoSentry#readme"
Repository = "https://github.com/KirkForge/PicoSentry"
Issues = "https://github.com/KirkForge/PicoSentry/issues"
Changelog = "https://github.com/KirkForge/PicoSentry/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/KirkForge/PicoSentry/releases"
"Source Code" = "https://github.com/KirkForge/PicoSentry"
"Bug Tracker" = "https://github.com/KirkForge/PicoSentry/issues"
Commercial = "https://github.com/KirkForge/PicoShogun"

[project.scripts]
picosentry = "picosentry.cli:main"

[tool.setuptools.packages.find]
include = ["picosentry*"]

# Keep bytecode cache and editor cruft out of sdist/wheel artifacts.
# setuptools>=77 already excludes most of this, but being explicit
# protects against future toolchain changes and makes the policy visible.
[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.py[cod]", "*.pyo", ".DS_Store"]

[tool.setuptools.package-data]
picosentry = ["py.typed"]
"picosentry.scan" = [
    "corpus/*.json",
    "corpus/ioc/*.json",
    "corpus/advisories/*.json",
    "docs/rules/*.md",
    "py.typed",
]
"picosentry.watch" = [
    "py.typed",
]
"picosentry.watch.rules" = ["prompt_injection/*.yaml", "prompt_injection/*.yml", "output_policy/*.yaml", "output_policy/*.yml"]
"picosentry.sandbox" = ["py.typed", "docs/rules/*.md"]
"picosentry.sandbox.grpc_transport.proto" = ["*.py", "*.proto"]
"picosentry.serve" = ["config/*.json"]
"picosentry.serve.plugins" = ["*/plugin.json", "*/*.py"]
"picosentry.serve.front" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["picosentry", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
norecursedirs = ["scripts", "plugins"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
]
filterwarnings = [
    # Starlette/httpx deprecation is a third-party decision (Pydantic's
    # httpx2 fork). We pin httpx and silence the noisy warning rather than
    # swapping the project's HTTP client for a fork.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
    # Multiprocessing fork() in a multi-threaded process comes from the OTel
    # batch span processor threads running during scan worker tests. The engine
    # handles fork-safety defensively; this is not actionable in tests.
    "ignore:This process .* is multi-threaded, use of fork\\(\\) may lead to deadlocks",
]

# pytest-asyncio settings — these belong in their own table, not
# [tool.pytest.ini_options], where pytest-asyncio's plugin doesn't
# read them. v2.0.9 had these misplaced, producing two
# `Unknown config option` warnings on every test run.
[tool.pytest_asyncio.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = [
    "E501", "N806", "N818", "N802", "N812",
    "A002", "B007", "B905",
    "SIM105", "SIM102", "SIM108", "SIM117", "C416",
    "B008",
    # I001 (isort "import block is un-sorted or un-formatted") is suppressed
    # for the shipped codebase. The minifier (.tools/minify.py) strips
    # module docstrings and most blank lines to reduce token cost, which
    # leaves import blocks without the inter-group blank lines isort
    # expects. The minified output is functionally equivalent; unminified
    # source can still be edited by hand and any future minifier passes
    # will produce the same import layout.
    "I001",
]

[tool.ruff.lint.per-file-ignores]
# Intentional / pre-existing typographic and stylistic choices:
# - E402 in the obfuscated PoC setup.py (the whole point is to look suspicious)
# - E741 single-letter `l` for `layer` in correlation scoring
# - RUF001/RUF002 en-dashes in docstrings ("0.0–1.0" range notation) and ℹ emoji icon
"examples/pypi-obfuscated-setup/setup.py" = ["E402"]
"picosentry/scan/rules/typosquat_utils.py" = ["RUF002"]
"picosentry/serve/services/correlation.py" = ["E741", "RUF001", "RUF002"]
"picosentry/sandbox/grpc_transport/proto/*.py" = ["E", "F", "UP", "SIM", "B", "RUF"]
"picosentry/_core/security_check.py" = ["RUF001"]
"tests/sandbox/check_deploy_security.py" = ["RUF001"]
"tests/scan/fixtures/validation/positive/malicious_pypi_obfs_full/setup.py" = ["E402", "F401"]
"tests/scan/fixtures/validation/positive/pypi_obfs_marshal_load/_evil.py" = ["SIM115"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
exclude = [
    "build/", "dist/", ".venv/",
    # Malicious/obfuscated fixture files intentionally contain invalid Python
    # to exercise detectors; don't let them pollute the type-check report.
    "tests/scan/fixtures/validation/positive/*/_evil.py",
    "tests/scan/fixtures/validation/positive/pypi_obfs_ord_chain/_evil.py",
    "tests/scan/fixtures/validation/positive/pypi_obfs_b64decodestring/_evil.py",
    "tests/scan/fixtures/validation/positive/malicious_pypi_obfs_full/setup.py",
]

# gRPC proto stubs are committed (see scripts/regen_proto.sh) so the
# transport module is importable on a stock `pip install`.  The
# static type-checker still can't see them reliably across all
# grpcio versions, so we silence the resulting attr-defined errors.
[[tool.mypy.overrides]]
module = "picosentry.sandbox.grpc_transport.*"
ignore_errors = true

# sigstore is an optional extra — not always installed. crypto.py gates the
# imports behind `_check_sigstore()`, so we silence the type errors when the
# package is absent.
[[tool.mypy.overrides]]
module = "picosentry.scan.crypto"
ignore_errors = true

# OpenTelemetry is an optional extra; the installed package's partial type
# stubs don't expose the `trace` attribute reliably across versions.  The file
# gates all OTel usage behind an import check and a feature flag, so silencing
# the type checker here is safe.
[[tool.mypy.overrides]]
module = "picosentry.sandbox.tracing"
disable_error_code = ["attr-defined"]

# The daemon HTTP handler is composed of multiple mixin classes
# (PicoDomeResponseMixin, PicoDomeAuthMixin, PicoDomeGetRoutesMixin,
# PicoDomePostRoutesMixin) that share state via the composite PicoDomeHandler
# class in handler.py. Each mixin annotates `self: PicoDomeHandler` on its
# methods so mypy can resolve cross-mixin attributes, but mypy's `misc`
# override check fires because PicoDomeHandler is a *subtype* of each mixin
# (not a supertype), and `self: PicoDomeHandler` reads as "this mixin method
# has a self type that's wider than the mixin itself". Silencing `misc` here
# lets the `attr-defined` checks — the ones that actually catch typos like
# `self._send_josn(...)` — still fire.
[[tool.mypy.overrides]]
module = [
    "picosentry.sandbox.daemon.handler_mixins",
    "picosentry.sandbox.daemon.handler_routes_get",
    "picosentry.sandbox.daemon.handler_routes_post",
]
disable_error_code = ["misc"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]

