[project]
name = "my-awesome-package"
version = "1.0.0"
description = "A clean Python project for testing"
dependencies = [
    "requests>=2.0.0",
    "urllib3>=1.26.0",
    "certifi",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"